# lewa

./: .env  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  REUSE.toml  docker-compose.yaml  entrypoint.sh  nginx.conf  pyproject.toml
.github/workflows/: docker.yml  lint.yml
lewa/: manage.py
lewa-frontend/: Dockerfile  package-lock.json  package.json
lewa-frontend/src/app/: layout.js  page.jsx
lewa-frontend/src/app/about/: page.jsx
lewa-frontend/src/app/auth/: page.jsx
lewa-frontend/src/components/: about.jsx  cta.jsx  features.jsx  footer.jsx  hero.jsx  languages-detail.jsx  languages.jsx  navigation.jsx  why.jsx
lewa/accounts/: admin.py  apps.py  forms.py  models.py  tests.py  views.py
lewa/accounts/migrations/: 0001_initial.py  0002_customuser_score.py
lewa/core/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
lewa/core/migrations/: 0001_initial.py  __init__.py
lewa/lewa/: asgi.py  settings.py  urls.py  wsgi.py
lewa/lewa-data/: writing_systems.json
lewa/lewa-data/languages/: cm-bax.toml  cm-ewo.toml  cm-fmp.toml  et-am.toml
lewa/lewa-data/writing_systems/: bamun.toml  gacl.toml  geez.toml
lewa/templates/: 403_csrf.html  404.html  500.html  _base.html  base.html
lewa/templates/account/: account_inactive.html  base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
(+25 files in other folders)
