[project]
name = "lewa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crispy-bulma>=0.12.0",
    "django~=5.2",
    "django-allauth[openid,socialaccount]>=65.9.0",
    "django-debug-toolbar~=5.2",
    "django-environ~=0.11.2",
    "pillow~=11.2",
    "whitenoise~=6.9",
]

[dependency-groups]
prod = [
    "gunicorn~=23.0",
    "uvicorn~=0.34",
    "uvicorn-worker~=0.3",
]
dev = [
    "djlint>=1.36.4",
    "ruff>=0.11.6",
]

[tool.djlint]
ignore="H006"
